# timescaledb-gui

./: .env  README.md  docker-compose.yml  timescaledb.code-workspace  todo.md
.obsidian/: workspace.json
api/: .env  .flake8  README.md  pyproject.toml
api/api/: __main__.py  main.py
api/api/api/: api.py  dependencies.py
api/api/db/: crud.py  database.py  schemas.py
api/api/rest/: rest.py
api/api/rest/routers/: hyper_and_chunks.py  info.py
api/api/shared/: logger.py  settings.py
docs/design/: Untitled.sketch
