[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "api"
version = "0.0.1"
description = ""
authors = ["konstantin.dudersky <konstantin.dudersky@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.*"

fastapi = "0.86.0"
psycopg = "3.1.4"
python-dotenv = "0.21.0"
uvicorn = "0.19.0"

[tool.poetry.group.dev.dependencies]
black = "*"
wemake-python-styleguide = "0.17.0"

[tool.poetry.scripts]
start = 'api.main:main'


[tool.black]
line-length = 80


[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = true
stubPath = '.venv/typings'
typeCheckingMode = "strict"
